// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkForm should create different SSID successfully 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 cbMLbS"
  >
    <div
      class="ant-page-header has-breadcrumb ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/tenant-id/t/networks"
              >
                Networks
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            >
              Create New Network
            </h1>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="styledComponents__Wrapper-sc-1ibvcih-0 eEdkpj"
    data-testid="steps-form"
  >
    <form
      class="ant-form ant-form-vertical"
      step="0"
      title="Network Details"
    >
      <div
        class="ant-row"
      >
        <div
          class="ant-col ant-col-4"
          data-testid="steps-form-steps"
        >
          <div
            class="ant-steps ant-steps-vertical styledComponents__Steps-sc-1ibvcih-1 bfZYhj ant-steps-dot"
          >
            <div
              class="ant-steps-item ant-steps-item-process ant-steps-item-active"
            >
              <div
                class="ant-steps-item-container"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    <span
                      class="ant-steps-icon-dot"
                    />
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    Network Details
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    <span
                      class="ant-steps-icon-dot"
                    />
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    Settings
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    <span
                      class="ant-steps-icon-dot"
                    />
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    Venues
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    <span
                      class="ant-steps-icon-dot"
                    />
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    Summary
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-20"
          data-testid="steps-form-body"
        >
          <div
            class="ant-row"
            style="margin-left: -10px; margin-right: -10px;"
          >
            <div
              class="ant-col ant-col-10"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <h3
                class="ant-typography styledComponents__Title-sc-71wmpn-3 koemyr"
              >
                Network Details
              </h3>
              <div
                class="ant-form-item ant-form-item-has-feedback ant-form-item-has-success"
                style="margin-bottom: 5px;"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class="ant-form-item-required"
                      for="name"
                      title=""
                    >
                      Network Name
                      <svg
                        data-testid="QuestionMarkCircleOutlined"
                      />
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper ant-input-affix-wrapper-status-success ant-input-affix-wrapper-has-feedback"
                        >
                          <input
                            class="ant-input"
                            id="name"
                            type="text"
                            value="open network test"
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              class="ant-form-item-feedback-icon ant-form-item-feedback-icon-success"
                            >
                              <span
                                aria-label="check-circle"
                                class="anticon anticon-check-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="check-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="ant-btn ant-btn-link styledComponents__Button-sc-zk1lj8-0 ibsWZY"
                id="differentSSID"
                style="font-size: 12px;"
                type="button"
              >
                <span>
                  Set different SSID
                </span>
              </button>
              <div
                class="ant-form-item"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class=""
                      for="description"
                      title="Description"
                    >
                      Description
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <textarea
                          class="ant-input"
                          id="description"
                          rows="4"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="ant-form-item ant-form-item-has-success"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class="ant-form-item-required"
                                for="type"
                                title="Network Type"
                              >
                                Network Type
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-radio-group ant-radio-group-outline"
                                    id="type"
                                  >
                                    <div
                                      class="ant-space ant-space-vertical"
                                    >
                                      <div
                                        class="ant-space-item"
                                        style="margin-bottom: 8px;"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio ant-radio-checked"
                                          >
                                            <input
                                              class="ant-radio-input"
                                              type="radio"
                                              value="psk"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Pre-Shared Key (PSK)
                                            <div
                                              class="styledComponents__RadioDescription-sc-1mpg945-2 dxaZmg"
                                            >
                                              Require users to enter a passphrase (that you have defined for the network) to connect
                                            </div>
                                          </span>
                                        </label>
                                      </div>
                                      <div
                                        class="ant-space-item"
                                        style="margin-bottom: 8px;"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio"
                                          >
                                            <input
                                              class="ant-radio-input"
                                              type="radio"
                                              value="dpsk"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Dynamic Pre-Shared Key (DPSK)
                                            <div
                                              class="styledComponents__RadioDescription-sc-1mpg945-2 dxaZmg"
                                            >
                                              Require users to enter a passphrase to connect. The passphrase is unique per device
                                            </div>
                                          </span>
                                        </label>
                                      </div>
                                      <div
                                        class="ant-space-item"
                                        style="margin-bottom: 8px;"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio"
                                          >
                                            <input
                                              class="ant-radio-input"
                                              type="radio"
                                              value="aaa"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Enterprise AAA (802.1X)
                                            <div
                                              class="styledComponents__RadioDescription-sc-1mpg945-2 dxaZmg"
                                            >
                                              Use 802.1X standard and WPA2 security protocols to authenticate users using an authentication server on the network
                                            </div>
                                          </span>
                                        </label>
                                      </div>
                                      <div
                                        class="ant-space-item"
                                        style="margin-bottom: 8px;"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio"
                                          >
                                            <input
                                              class="ant-radio-input"
                                              type="radio"
                                              value="guest"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Captive Portal
                                            <div
                                              class="styledComponents__RadioDescription-sc-1mpg945-2 dxaZmg"
                                            >
                                              Users are authorized through a captive portal in various methods
                                            </div>
                                          </span>
                                        </label>
                                      </div>
                                      <div
                                        class="ant-space-item"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio"
                                          >
                                            <input
                                              class="ant-radio-input"
                                              type="radio"
                                              value="open"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Open Network
                                            <div
                                              class="styledComponents__RadioDescription-sc-1mpg945-2 dxaZmg"
                                            >
                                              Allow users to access the network without any authentication/security (not recommended)
                                            </div>
                                          </span>
                                        </label>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-14"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <div
                class="ant-row ant-row-center"
              >
                <div
                  class="ant-col"
                >
                  <div
                    class="styledComponents__Diagram-sc-1mpg945-0 bGQlIU"
                  >
                    <img
                      alt="Pre-Shared Key (PSK)"
                      src="psk.png"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styledComponents__ActionsContainer-sc-71wmpn-1 eCCHZw"
        data-testid="steps-form-actions"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 12px;"
          >
            <button
              class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 ibsWZY"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 12px;"
              >
                <button
                  class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 ibsWZY"
                  disabled=""
                  type="button"
                >
                  <span>
                    Back
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 glXBEv"
                  type="button"
                >
                  <span>
                    Next
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </section>
</DocumentFragment>
`;

exports[`NetworkForm should create open network successfully 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 cbMLbS"
  >
    <div
      class="ant-page-header has-breadcrumb ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/tenant-id/t/networks"
              >
                Networks
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            >
              Create New Network
            </h1>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="styledComponents__Wrapper-sc-1ibvcih-0 eEdkpj"
    data-testid="steps-form"
  >
    <form
      class="ant-form ant-form-vertical"
      step="0"
      title="Network Details"
    >
      <div
        class="ant-row"
      >
        <div
          class="ant-col ant-col-4"
          data-testid="steps-form-steps"
        >
          <div
            class="ant-steps ant-steps-vertical styledComponents__Steps-sc-1ibvcih-1 bfZYhj ant-steps-dot"
          >
            <div
              class="ant-steps-item ant-steps-item-process ant-steps-item-active"
            >
              <div
                class="ant-steps-item-container"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    <span
                      class="ant-steps-icon-dot"
                    />
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    Network Details
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    <span
                      class="ant-steps-icon-dot"
                    />
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    Settings
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    <span
                      class="ant-steps-icon-dot"
                    />
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    Venues
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    <span
                      class="ant-steps-icon-dot"
                    />
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    Summary
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-20"
          data-testid="steps-form-body"
        >
          <div
            class="ant-row"
            style="margin-left: -10px; margin-right: -10px;"
          >
            <div
              class="ant-col ant-col-10"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <h3
                class="ant-typography styledComponents__Title-sc-71wmpn-3 koemyr"
              >
                Network Details
              </h3>
              <div
                class="ant-form-item ant-form-item-has-feedback ant-form-item-has-success"
                style="margin-bottom: 5px;"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class="ant-form-item-required"
                      for="name"
                      title=""
                    >
                      Network Name
                      <svg
                        data-testid="QuestionMarkCircleOutlined"
                      />
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper ant-input-affix-wrapper-status-success ant-input-affix-wrapper-has-feedback"
                        >
                          <input
                            class="ant-input"
                            id="name"
                            type="text"
                            value=""
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              class="ant-form-item-feedback-icon ant-form-item-feedback-icon-success"
                            >
                              <span
                                aria-label="check-circle"
                                class="anticon anticon-check-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="check-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="ant-btn ant-btn-link styledComponents__Button-sc-zk1lj8-0 ibsWZY"
                id="differentSSID"
                style="font-size: 12px;"
                type="button"
              >
                <span>
                  Set different SSID
                </span>
              </button>
              <div
                class="ant-form-item"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class=""
                      for="description"
                      title="Description"
                    >
                      Description
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <textarea
                          class="ant-input"
                          id="description"
                          rows="4"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="ant-form-item ant-form-item-has-success"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class="ant-form-item-required"
                                for="type"
                                title="Network Type"
                              >
                                Network Type
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-radio-group ant-radio-group-outline"
                                    id="type"
                                  >
                                    <div
                                      class="ant-space ant-space-vertical"
                                    >
                                      <div
                                        class="ant-space-item"
                                        style="margin-bottom: 8px;"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio"
                                          >
                                            <input
                                              class="ant-radio-input"
                                              type="radio"
                                              value="psk"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Pre-Shared Key (PSK)
                                            <div
                                              class="styledComponents__RadioDescription-sc-1mpg945-2 dxaZmg"
                                            >
                                              Require users to enter a passphrase (that you have defined for the network) to connect
                                            </div>
                                          </span>
                                        </label>
                                      </div>
                                      <div
                                        class="ant-space-item"
                                        style="margin-bottom: 8px;"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio"
                                          >
                                            <input
                                              class="ant-radio-input"
                                              type="radio"
                                              value="dpsk"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Dynamic Pre-Shared Key (DPSK)
                                            <div
                                              class="styledComponents__RadioDescription-sc-1mpg945-2 dxaZmg"
                                            >
                                              Require users to enter a passphrase to connect. The passphrase is unique per device
                                            </div>
                                          </span>
                                        </label>
                                      </div>
                                      <div
                                        class="ant-space-item"
                                        style="margin-bottom: 8px;"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio"
                                          >
                                            <input
                                              class="ant-radio-input"
                                              type="radio"
                                              value="aaa"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Enterprise AAA (802.1X)
                                            <div
                                              class="styledComponents__RadioDescription-sc-1mpg945-2 dxaZmg"
                                            >
                                              Use 802.1X standard and WPA2 security protocols to authenticate users using an authentication server on the network
                                            </div>
                                          </span>
                                        </label>
                                      </div>
                                      <div
                                        class="ant-space-item"
                                        style="margin-bottom: 8px;"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio"
                                          >
                                            <input
                                              class="ant-radio-input"
                                              type="radio"
                                              value="guest"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Captive Portal
                                            <div
                                              class="styledComponents__RadioDescription-sc-1mpg945-2 dxaZmg"
                                            >
                                              Users are authorized through a captive portal in various methods
                                            </div>
                                          </span>
                                        </label>
                                      </div>
                                      <div
                                        class="ant-space-item"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio ant-radio-checked"
                                          >
                                            <input
                                              class="ant-radio-input"
                                              type="radio"
                                              value="open"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Open Network
                                            <div
                                              class="styledComponents__RadioDescription-sc-1mpg945-2 dxaZmg"
                                            >
                                              Allow users to access the network without any authentication/security (not recommended)
                                            </div>
                                          </span>
                                        </label>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-14"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <div
                class="ant-row ant-row-center"
              >
                <div
                  class="ant-col"
                >
                  <div
                    class="styledComponents__Diagram-sc-1mpg945-0 bGQlIU"
                  >
                    <img
                      alt="Open Network"
                      src="open.png"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styledComponents__ActionsContainer-sc-71wmpn-1 eCCHZw"
        data-testid="steps-form-actions"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 12px;"
          >
            <button
              class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 ibsWZY"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 12px;"
              >
                <button
                  class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 ibsWZY"
                  disabled=""
                  type="button"
                >
                  <span>
                    Back
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 glXBEv"
                  type="button"
                >
                  <span>
                    Next
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </section>
</DocumentFragment>
`;
